--- a/src/assets/stylesheets/css/normalize.css
+++ b/src/assets/stylesheets/css/normalize.css
@@ -7,6 +7,9 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+  *{
+    box-sizing: border-box;
+  }
 
  html {
     line-height: 1.15; /* 1 */
@@ -147,6 +150,7 @@
   
   img {
     border-style: none;
+    max-width: 100%;
   }
   
   /* Forms
