--- a/src/assets/stylesheets/scss/blocks/header.scss
+++ b/src/assets/stylesheets/scss/blocks/header.scss
@@ -1,88 +1,111 @@
 body {
-  background-color: pink;
+  background-color: #e5e5e5;
 }
-.header {
-  width: 1115px;
+
+.container {
+  max-width: 1130px;
+  padding: 0 15px;
   margin: 0 auto;
-  display: flex;
-  width: 1115px;
-  align-items: center;
-  margin-top: 50px;
 }
+
+.header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .header__logo {
-  margin-right: 268px;
+  margin-right: 262px;
   height: 67px;
 }
-.navigation {
-  display: flex;
 
-  & li {
-    padding-right: 23px;
-    list-style-type: none;
+.list__item {
+  padding-right: 23px;
+  list-style-type: none;
+}
 
-    & > a {
-      text-decoration: none;
-      @include OpenSans-bold;
+.item__link {
+  @include OpenSans-bold;
 
-      &:active {
-        color: $orangeActive;
-      }
+  text-decoration: none;
 
-      &:hover:not(:active) {
-        color: $WhiteHover;
-      }
-    }
+  &:active {
+    color: $orangeActive;
+  }
+
+  &:hover:not(:active) {
+    color: $WhiteHover;
   }
 }
+
+.navigation__list {
+  display: flex;
+  padding-left: unset;
+}
+
 .cart__svg {
   margin-left: 13px;
 }
+
 .divider {
   width: 51px;
   height: 0px;
   border-bottom: 1px solid $whiteBasic;
   transform: rotate(90deg);
 }
+
 .number__section {
   display: inline-block;
   width: 162px;
-  & > p {
-    margin: auto;
-    text-decoration: none;
-    @include OpenSans-regular;
+  margin-right: 45px;
+}
+
+.number {
+  @include OpenSans-bold;
+
+  text-decoration: none;
+  font-size: 18px;
+
+  &:active {
+    color: $orangeActive;
   }
-  & > a {
-    text-decoration: none;
-    @include OpenSans-bold;
 
-    &:active {
-      color: $orangeActive;
-    }
-
-    &:hover:not(:active) {
-      color: $WhiteHover;
-    }
+  &:hover:not(:active) {
+    color: $WhiteHover;
   }
 }
+
+.number__image {
+  background: url("../../images/svg/phone-min.svg") left center no-repeat;
+  padding-left: calc(23px + 8px);
+}
+
+.number__label {
+  @include OpenSans-regular;
+
+  margin: auto;
+  text-decoration: none;
+}
+
 .button {
-  margin-left: auto;
+  @include OpenSans-bold;
+
   width: 157px;
   height: 47px;
   background-color: $orangeStatic;
   border: unset;
+  text-align: center;
   cursor: pointer;
-
-  & > p {
-    @include OpenSans-bold;
-    text-align: center;
-  }
 
   &:active {
     background-color: $orangeActive;
-  }
-}
-.cart__svg {
-  &:active {
-    color: $orangeActive;
   }
 }
