--- a/src/assets/stylesheets/scss/base/vars.scss
+++ b/src/assets/stylesheets/scss/base/vars.scss
@@ -20,33 +20,25 @@ $blackPrimary: #2c2c2c;
 
 //Shadow
 $shadow1: 10px 10px 40px rgba(0, 0, 0, 0.1);
+$shadow2: 20px 0px 30px 3px #00000080;
 
 // Mixins
 @mixin OpenSans-bold {
   font-family: Open Sans;
-  font-size: 14px;
   font-weight: 700;
-  line-height: 19px;
   letter-spacing: 0em;
-  text-align: left;
-  color: $whiteBasic;
 }
 
 @mixin OpenSans-regular {
   font-family: Open Sans;
-  font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 19px;
   letter-spacing: 0em;
-  text-align: left;
-  color: $whiteBasic;
 }
 
 @mixin Tinos-regular {
   font-family: Tinos;
   font-style: normal;
   font-weight: 400;
-  line-height: 57px;
   letter-spacing: 0em;
 }
