--- a/src/assets/stylesheets/scss/blocks/header.scss
+++ b/src/assets/stylesheets/scss/blocks/header.scss
@@ -1,13 +1,3 @@
-body {
-  background-color: #e5e5e5;
-}
-
-.container {
-  max-width: 1130px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 .header {
   position: absolute;
   left: 0;
@@ -34,6 +24,9 @@ body {
 
 .item__link {
   @include OpenSans-bold;
+  font-size: 14px;
+  line-height: 19px;
+  color: $whiteStandart;
 
   text-decoration: none;
 
@@ -53,6 +46,7 @@ body {
 
 .cart__svg {
   margin-left: 13px;
+  block-size: 13px;
 }
 
 .divider {
@@ -82,7 +76,13 @@ body {
     color: $WhiteHover;
   }
 }
+.number {
+  @include OpenSans-bold;
 
+  color: $whiteStandart;
+  font-size: 18px;
+  line-height: 25px;
+}
 .number__image {
   background: url("../../images/svg/phone-min.svg") left center no-repeat;
   padding-left: calc(23px + 8px);
@@ -91,6 +91,9 @@ body {
 .number__label {
   @include OpenSans-regular;
 
+  color: $whiteStandart;
+  font-size: 14px;
+  line-height: 19px;
   margin: auto;
   text-decoration: none;
 }
@@ -98,11 +101,14 @@ body {
 .button {
   @include OpenSans-bold;
 
+  color: $whiteStandart;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
   width: 157px;
   height: 47px;
   background-color: $orangeStatic;
   border: unset;
-  text-align: center;
   cursor: pointer;
 
   &:active {
