--- a/src/assets/stylesheets/css/main.css
+++ b/src/assets/stylesheets/css/main.css
@@ -357,6 +357,14 @@ body {
   background-color: #ffffff;
 }
 
+.wrapper {
+  min-height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 1fr auto;
+  grid-template-rows: auto 1fr auto;
+}
+
 .container {
   max-width: 1130px;
   margin: 0 auto;
