--- a/src/assets/stylesheets/scss/main.scss
+++ b/src/assets/stylesheets/scss/main.scss
@@ -11,6 +11,12 @@ body {
   background-color: $whiteStandart;
 }
 
+.wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 .container {
   max-width: 1130px;
   margin: 0 auto;
