--- a/src/assets/stylesheets/scss/main.scss
+++ b/src/assets/stylesheets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/hero-block.scss";
 @import "./blocks/story-block.scss";
+@import "./blocks/footer.scss";
 
 body {
   background-color: $whiteStandart;
