--- a/src/assets/stylesheets/scss/blocks/story-block.scss
+++ b/src/assets/stylesheets/scss/blocks/story-block.scss
@@ -3,6 +3,7 @@
 
   display: flex;
   padding-top: 100px;
+  padding-bottom: 182px;
   color: black;
 }
 
@@ -10,7 +11,7 @@
   width: 444px;
   min-height: 422px;
   text-align: center;
-  h1 {
+  h2 {
     @include Tinos-regular;
     font-size: 54px;
     line-height: 62px;
