--- a/src/assets/stylesheets/scss/blocks/header.scss
+++ b/src/assets/stylesheets/scss/blocks/header.scss
@@ -109,9 +109,18 @@
   height: 47px;
   background-color: $orangeStatic;
   border: unset;
+  transition: background-color 0.5s ease;
   cursor: pointer;
 
   &:active {
-    background-color: $orangeActive;
+    border: 3px dotted red;
+    color: red;
+    background: rgba(0, 0, 0, 0);
+  }
+  &:hover:not(:active) {
+    transition: background-color 0.6s ease;
+    border: 3px dotted $orangeActive;
+    color: $orangeActive;
+    background: rgba(0, 0, 0, 0);
   }
 }
